Fixes too wide tables and un-blur touch event

--- a/css/blocks.css
+++ b/css/blocks.css
@@ -100,7 +100,7 @@
     left: 0;
     bottom: 0;
     right: 0;
-    z-index: 1;
+    z-index: 0;
     opacity: .5;
     -webkit-backdrop-filter: blur(1.5rem) brightness(90%);
     backdrop-filter: blur(1.5rem) brightness(90%);
@@ -444,10 +444,10 @@ figure.wp-block-pullquote {
 
 .wp-block-table {
   overflow-x: auto;
-  margin-left: 14px;
-  margin-right: 14px;
-  width: calc( 100% - 28px );
-}
+/*  margin-left: 14px;
+  margin-right: 14px;*/
+/*  width: calc( 100% - 28px );
+*/}
 
 .wp-block-table table {
   border-collapse: collapse;
